# Watch-Party-Manager

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README-Scheduler-Bot-Merge.md  README.md  env.example  merge_scheduler_into_bot.py  pyproject.toml
.claude/: settings.json
data/: README.md  suggestion_database_configurations.json.pre_migration.bak
docs/: 00-Table-of-Contents.md  01-Product-Vision.md  02-Architecture.md  03-Functional-Specification.md  04-Data-Model.md  05-Administration.md  06-Developer-Guide.md  07-Implementation-Checklist.md  08-Expanded-Help.md  09-Installation-Guide.md  10-Command-Reference.md  98-Glossary.md  99-Decision-Log.md  Future-Ideas.md  guild_configuration_spec.md  project_state.md
engine/: watch_party_engine.py
scripts/: reset_dev_data.ps1
tests/: test_about_command.py  test_about_service.py  test_add_suggestion_command.py  test_backup_commands.py  test_backup_service.py  test_bot_helpers.py  test_bot_scheduler_lifecycle.py  test_candidate_selection_strategy.py  test_close_vote_job_handler.py  test_command_permissions.py  test_config_command.py  test_config_service.py  test_config_view.py  test_configuration_validation.py  test_database_backup_service.py  test_database_commands.py  test_diagnostics_command.py  test_duplicate_detection_service.py  test_edit_suggestion_command.py  test_edit_vote_command.py  test_edit_vote_view.py  test_embed_factory.py  test_guild_configuration.py  test_guild_configuration_repository.py  test_help_registry.py  test_help_service.py  test_imdb_metadata_service.py  test_import_service.py  (+76 more)
(+90 files in other folders)
